refactoring and bug fixing
