# internal/http/sys/swagger.go
@@ -142,94 +142,6 @@ func nopUpdateSite() {}
 //	@Security		SysAuth
 func nopDeleteSite() {}
 
-//	@Summary		List feeds
-//	@Description	get feeds
-//	@Tags			feeds
-//	@Accept			json
-//	@Produce		json
-//	@Param			index	query		int			false	"Page Index"	default(0)	minimum(0)
-//	@Param			size	query		int			false	"Page Size"		default(20)	minimum(1)	maximum(100)
-//	@Success		200		{array}		entity.Feed	"OK"
-//	@Failure		400		{object}	wool.Error
-//	@Failure		401		{object}	wool.Error
-//	@Failure		403		{object}	wool.Error
-//	@Failure		500		{object}	wool.Error
-//	@Router			/feeds [get]
-//	@Security		SysAuth
-func nopFeedList() {}
-
-//	@Summary		Show a feed
-//	@Description	get feed by ID
-//	@Tags			feeds
-//	@Accept			json
-//	@Produce		json
-//	@Param			id	path		string		true	"Feed ID"	Format(uuid)
-//	@Success		200	{object}	entity.Feed	"OK"
-//	@Failure		400	{object}	wool.Error
-//	@Failure		401	{object}	wool.Error
-//	@Failure		403	{object}	wool.Error
-//	@Failure		404	{object}	wool.Error
-//	@Failure		500	{object}	wool.Error
-//	@Router			/feeds/{id} [get]
-//	@Security		SysAuth
-func nopFeedByID() {}
-
-//	@Summary		Create feed
-//	@Description	add new feed
-//	@Tags			feeds
-//	@Accept			json
-//
-//	@Param			request	body		CreateFeedDTO	true	"Create Feed DTO"
-//
-//	@Header			201		{string}	Location		"/feeds/{id}"
-//	@Success		201
-//	@Failure		400	{object}	wool.Error
-//	@Failure		401	{object}	wool.Error
-//	@Failure		403	{object}	wool.Error
-//	@Failure		409	{object}	wool.Error
-//	@Failure		422	{object}	wool.Error
-//	@Failure		500	{object}	wool.Error
-//	@Router			/feeds [post]
-//	@Security		SysAuth
-func nopCreateFeed() {}
-
-//	@Summary		Update feed
-//	@Description	edit feed
-//	@Tags			feeds
-//	@Accept			json
-//
-//	@Param			id		path	string			true	"Feed ID"	Format(uuid)
-//	@Param			request	body	UpdateFeedDTO	true	"Update Feed DTO"
-//
-//	@Success		204
-//	@Failure		400	{object}	wool.Error
-//	@Failure		401	{object}	wool.Error
-//	@Failure		403	{object}	wool.Error
-//	@Failure		404	{object}	wool.Error
-//	@Failure		409	{object}	wool.Error
-//	@Failure		422	{object}	wool.Error
-//	@Failure		500	{object}	wool.Error
-//	@Router			/feeds/{id} [patch]
-//	@Security		SysAuth
-func nopUpdateFeed() {}
-
-//	@Summary		Delete feed
-//	@Description	delete feed
-//	@Tags			feeds
-//	@Accept			json
-//
-//	@Param			id	path	string	true	"Feed ID"	Format(uuid)
-//
-//	@Success		204
-//	@Failure		400	{object}	wool.Error
-//	@Failure		401	{object}	wool.Error
-//	@Failure		403	{object}	wool.Error
-//	@Failure		404	{object}	wool.Error
-//	@Failure		500	{object}	wool.Error
-//	@Router			/feeds/{id} [delete]
-//	@Security		SysAuth
-func nopDeleteFeed() {}
-
 //	@Summary		List chats
 //	@Description	get chats
 //	@Tags			chats
